# devops-sandbox

./: .gitignore  README.md
python/simple-math-uv/: Dockerfile.build  Jenkinsfile  pyproject.toml
python/simple-math-uv/src/simple_math_uv/: __init__.py  app.py
python/simple-math-uv/tests/: test_app.py
